--- a/src/App.css
+++ b/src/App.css
@@ -20,12 +20,12 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: left;
+  justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
 }
 .App-footer {
-  background-color: #3c527e;
+  background-color: #949494;
   min-height: 10vh;
   display: flex;
   flex-direction: row;
