--- a/src/App.css
+++ b/src/App.css
@@ -21,13 +21,12 @@
 }
 .App-main {  
   grid-area: main;
-  padding-left: 100px;
   background-color: #e6e1e1;
   min-height: 50vh;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;  
   align-items: center;
-  justify-content: left;
+  justify-content: center;
   font-size: calc(10px + 2vmin);
   color: rgb(73, 73, 73);
 }
@@ -39,7 +38,8 @@
   flex-direction: row;
   align-items: center;
   justify-content: left;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(3px + 2vmin);
+  padding-left: 50px;
   color: white;
 }
 
