--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -32,7 +32,7 @@ header nav div div ul ul {
 
 header nav div div ul ul li {
   display: block;
-  width: 120%;
+  width: 100%;
   height: 100%;
   font-size: 80%;
   text-align: left;
@@ -87,7 +87,7 @@ li a:hover {
     #mainNav .navbar-nav .nav-item .nav-link.active {
       color: #6effff !important; }
     
-    @media (min-width: 992px) {
+    @media (min-width: 720px) {
       #mainNav {
         box-shadow: none;
         background-color: #282c34 }
@@ -116,10 +116,10 @@ li a:hover {
     
     #bgNavMenu {
       background-color: #282c34 }
-  @media (max-width: 719px) and (max-height: 575px) {
+  @media (max-width: 1000px) and (max-height: 575px) {
   .NavBar {
         background-color: #282c34;
-        min-height: 20vh;
+        min-height: 15vh;
         display: grid;
         grid-template-columns: 1fr 2fr 2fr;
         grid-template-rows: 15vh;
@@ -129,15 +129,17 @@ li a:hover {
         justify-content: center;
         font-size: calc(5px + 2vmin);
         color: white;
+        box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+        background-color: #282c34
   }
   }
-  @media (min-width: 720px) and (min-height: 576px) {
+  @media (min-width: 999px) and (min-height: 576px) {
   .NavBar {
     background-color: #282c34;
     min-height: 10vh;
     display: grid;
-    grid-template-columns: 1fr 3fr 1fr;
-    grid-template-rows: 15vh;
+    grid-template-columns: 1fr 4fr 1fr;
+    grid-template-rows: 12vh;
     grid-template-areas: 
                 "headerUno" "headerDos" "headerTres";
     align-items: center;
@@ -158,15 +160,17 @@ li a:hover {
   .rightNav {
     grid-area: "headerTres";
     display:flex;
-    align-content: space-evenly;
+    align-items: space-evenly;
     justify-content: space-evenly;
   }
   
   .Nav-logo{
     grid-area: "headerUno";
+    max-width: 230px;
     align-items:center;   
   }
   .logo{
     max-height: 100%;
-    max-width: 70%;
+    max-width: 90%;
   }
+
