--- a/src/components/ContactForm/ContactForm.css
+++ b/src/components/ContactForm/ContactForm.css
@@ -1,33 +1,18 @@
 .ContactForm {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    display: flex;    
+    justify-content: space-evenly;
+    align-items: center;    
 }
 
 .LabelContact {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    margin-top: 20px;
-    font-size: 14px;
+    align-items: center;
+    margin-top: 5px;
+    font-size: 15px;
+    font: bolder;
 }
 
-.InputContact {
-    border-style: none;
-    border-bottom: 2px solid #8C30F5;
-    width: 85vw;
-    height: 20px;
-    margin-top: 10px;
-    padding: 8px 5px;
-    background: transparent;
-    outline: none;
-}
 
-.InputContact:-webkit-autofill,
-.InputContact:-webkit-autofill:hover, 
-.InputContact:-webkit-autofill:focus, 
-.InputContact:-webkit-autofill:active  {
-  transition: background-color 5000s;
-  -webkit-text-fill-color: #fff !important;
-}
+
+
